bitfield/tests/09-variant-out-of-range.stderr
error[E0277]: the trait bound `bitfield::checks::False: bitfield::checks::DiscriminantInRange` is not satisfied
  --> tests/09-variant-out-of-range.rs:17:5
   |
8  | #[derive(BitfieldSpecifier)]
   |          ----------------- in this derive macro expansion
...
17 |     External,
   |     ^^^^^^^^ the trait `bitfield::checks::DiscriminantInRange` is not implemented for `bitfield::checks::False`
   |
   = help: the trait `bitfield::checks::DiscriminantInRange` is implemented for `bitfield::checks::True`
   = note: this error originates in the derive macro `BitfieldSpecifier` (in Nightly builds, run with -Z macro-backtrace for more info)
